# apple-sample-spider

./: .gitignore  Dockerfile  LICENSE  README.md  apple.py  main.py  pyproject.toml  settings.py
crawlee_spider/: __main__.py  main.py  routes.py
