[project]
name = "crawlee-spider"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "apify-fingerprint-datapoints>=0.6.0",
    "crawlee[playwright]",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "tqdm>=4.67.1",
]

